Fixing horizontal scroll

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 body {
 	background-color: #dfe6e9;
 	background-size: 100% 100%;
@@ -84,6 +88,12 @@ footer {
 
 #apps{
 	border-radius: 20px;
+}
+
+.bgicons{
+	position: absolute;
+	z-index: -10;
+	opacity: 0.05;
 }
 
 @media (prefers-color-scheme: dark) {
